Fixed line Separator border colors as per the light/dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -479,15 +479,23 @@ html {
   content: "";
   position: absolute;
   top: -50%;
-  left: -100%;
+  left: -95%;
   width: 3rem;
   height: 2rem;
   /* background: rgb(174, 174, 174); */
-  border-color: rgb(174, 174, 174);
   border-radius: 3rem;
   border-top: 0;
   border-right: 0;
   border-left: 0;
   border-width: 2px;
   z-index: 2;
+  border-color: inherit;
+}
+
+.borderColorDark{
+  border-color: rgb(107 114 128);
+}
+
+.borderColorLight{
+  border-color: rgb(209 213 219);
 }
